// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Notes Note with HTML 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h1>
    Button view
  </h1>
   
  <button
    class="button svelte-n2tx93"
  >
    <strong>
      Square
       corners
    </strong>
    <br />
     
    
     
    🤔😳😯😮😄😩😓😱🤓😑😶😊
    : 
    0
  </button>
   
  <p>
    A little text to show this is a view.
  </p>
   
  <p>
    If we need to test components in a Svelte environment, for instance to test slot behaviour,
  </p>
   
  <p>
    then wrapping the component up in a view
  </p>
   
  <p>
    made just for the story is the simplest way to achieve this.
  </p>
</section>
`;

exports[`Storyshots Addon|Notes Simple note 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h1>
    Button view
  </h1>
   
  <button
    class="button svelte-n2tx93"
  >
    <strong>
      Square
       corners
    </strong>
    <br />
     
    
     
    You clicked
    : 
    0
  </button>
   
  <p>
    A little text to show this is a view.
  </p>
   
  <p>
    If we need to test components in a Svelte environment, for instance to test slot behaviour,
  </p>
   
  <p>
    then wrapping the component up in a view
  </p>
   
  <p>
    made just for the story is the simplest way to achieve this.
  </p>
</section>
`;
